--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     background: linear-gradient(45deg, #131111, #3a4452);
 }
     .calculator{
+        height: 35rem;
+        width: 25rem;
         border: 1px solid #101111;
         padding: 20px;
         border-radius: 16px;
@@ -39,7 +41,7 @@ body{
         border: none;
         width: 4rem;
         height: 4rem;
-        margin: 5px;
+        margin: 10px;
         border-radius: 50%;
         font-size: 1.5rem;
         background: transparent;
